fixed horizontal scroll issue on review page

--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,6 @@
 }
 
 #review-page-body #breadcrumb-container #breadcrumb {
-    width: 100%;
     padding: 10px 40px;
     margin-top: 0;
 }
